added modified css, index.html and js files for login

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <h3>Let's take you on a tour</h3>
                         <span>See the latest trends of African Wears</span>
                     <form id="signup">
-                        <input class= "signupInput" type="email" placeholder="enter your email" id="uname" required>
-                        <input class= "signupInput" type="password" placeholder="enter your password" id="password" required>
+                        <input class= "signupInput" type="email" placeholder="enter your email" id="uname" name="username" required>
+                        <input class= "signupInput" type="password" placeholder="enter your password" name="password" id="password" required>
                         <input class= "signupInput" type="password" placeholder="confirm password" id="cpassword" required>
                         <div id="signupErrorMessage"></div>
                         <div id="SignupSuccessMessage"></div>
@@ -30,8 +30,8 @@
                         <span id="loginRedirect">Have an account - <a href="#"><strong>Login</strong></a></span>
                     </form>
                     <form id="login">
-                        <input class= "loginInput" type="email" placeholder="enter your email" id="loginname" required>
-                        <input class= "logininput" type="password" placeholder="enter your password" id="loginpassword" required>
+                        <input class= "loginInput" type="email" placeholder="enter your email" name="username" id="loginname" required>
+                        <input class= "loginInput" type="password" placeholder="enter your password" name="password" id="loginpassword" required>
                         <div id="loginErrorMessage"></div>
                         <div id="loginSuccessMessage"></div>
                         <button type="button" id="loginSubmit">Welcome Back</button>
