--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="css/bootstrap-4.1.3/dist/js/bootstrap.min.js"></script>
+        <script src="js/jquery.session.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
