Added more features and got close to completing my user story

--- a/createpost.html
+++ b/createpost.html
@@ -26,14 +26,14 @@
                         <i class="fas fa-home"></i>
                         Dashboard
                     </a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <!-- <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
                             <a href="#">Home</a>
                         </li>
                         <li>
                             <a href="#">News Feed</a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </li>
                 <li class="active">
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
@@ -52,7 +52,7 @@
                         </li>
                     </ul>
                 </li>
-               <li>
+               <!-- <li>
                     <a href="#">
                         <i class="fas fa-images"></i>
                         Media
@@ -75,12 +75,12 @@
                         <i class="fas fa-sliders-h"></i>
                         Settings
                     </a>
-                </li>
+                </li> -->
             </ul>
 
             <ul class="list-unstyled CTAs">
                 <li>
-                    <a href="#" class="download">Visit Site</a>
+                    <a href="blog.html" class="download">Visit Site</a>
                 </li>
                 <li>
                     <a class="article">&copy; copyright 2018</a>
@@ -111,7 +111,7 @@
                                 <a class="nav-link" href="#"><i class="fas fa-user-circle"></i></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#" id='logout'><i class="fas fa-sign-out-alt"></i></a>
+                                <a class="nav-link" href="#" id='logout'><i class="fas fa-sign-out-alt" id="logtoutuser"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -214,7 +214,11 @@
         <script src="node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
         <script src="node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
+        <script src="node_modules/js-cookie/src/js.cookie.js"></script>
+        <script src="js/jquery-cookie-master/jquery-cookie-master/src/jquery.cookie.js"></script>
         <script src="js/main.js"></script>
         <script src="js/update-post.js"></script>
+        <script src="js/protect.js"> </script>
+
     </body>
 </html>
