--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,6 @@
         <title>Blog</title>
         <link rel="stylesheet" href="css/bootstrap-4.1.3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/dashboardsidebar.css">
         <link rel="stylesheet" href="css/blog.css">
         <!-- Font Awesome JS -->
         <link rel="icon" href="img/fav.jpg" sizes="16x16 32x32" type="image/png">
@@ -61,13 +60,31 @@
         <footer class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
-                    D
+                    <ul>
+                        <li>David makes Learning Fun</li>
+                        <li>Grey just made his first commit</li>
+                        <li>Decagon Bootcampers facing a heck!</li>
+                        <li>Coding might be impulsive</li>
+                        <li>Coding might need more women</li>
+                    </ul>
                 </div>
                 <div class="col-md-3">
-                    A
+                    <ul>
+                        <li>Meet the Trainers</li>
+                        <li>Shittu shares his experience</li>
+                        <li>Franklin seems to a coding geek</li>
+                        <li>Dauda talks about his first week</li>
+                        <li>Why learning coding is a plus</li>
+                    </ul>
                 </div>
                 <div class="col-md-3">
-                    B
+                    <ul>
+                        <li>The jobs of the 21st century</li>
+                        <li>What not to code</li>
+                        <li>Grace shares her experience</li>
+                        <li>How it all started</li>
+                        <li>Bosa talks about his past experience</li>
+                    </ul>
                 </div>
                 <div class="col-md-3 footer">
                     <h6>Join Our Mailing List</h6>
@@ -89,7 +106,7 @@
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
         <script src="js/jquery.session.js"></script>
-        <script src="../node_modules/js-cookie/src/js.cookie.js"></script>
+        <script src="node_modules/js-cookie/src/js.cookie.js"></script>
         <!-- <script src="js/main.js"></script> -->
         <script src="js/blogging.js"></script>
     </body>
