--- a/fullBlog.html
+++ b/fullBlog.html
@@ -5,8 +5,7 @@
         <title>Blog</title>
         <link rel="stylesheet" href="css/bootstrap-4.1.3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/dashboardsidebar.css">
-        <link rel="stylesheet" href="css/blog.css">
+        <link rel="stylesheet" href="css/fullblog.css">
         <!-- Font Awesome JS -->
         <link rel="icon" href="img/fav.jpg" sizes="16x16 32x32" type="image/png">
     </head>
@@ -50,6 +49,17 @@
         <section class="container-fluid fullBlogPost">
             <div class="row fullBlogTopRow">
             </div>
+            <div class="commentBox">
+                <form>
+                    <input type="text" placeholder="enter caption" id="commentCaption"><br>
+                    <input type="hidden" id="postID">
+                    <textarea cols="30" rows="10" id="commentMessage"></textarea><br>
+                    <button type="button" id="comment">Submit</button>
+                </form>
+            </div>
+            <div id="commentResult">
+                <span></span>
+            </div>
         </section>
         <footer class="container-fluid">
             <div class="row">
@@ -82,8 +92,9 @@
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
         <script src="js/jquery.session.js"></script>
-        <script src="../node_modules/js-cookie/src/js.cookie.js"></script>
+        <script src="node_modules/js-cookie/src/js.cookie.js"></script>
         <!-- <script src="js/main.js"></script> -->
-        <script src="js/blogging.js"></script>
+        <!-- <script src="js/blogging.js"></script> -->
+        <script src="js/fullblog.js"></script>
     </body>
 </html>
